--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Ecom{% endblock %}</title>
+    <title>{% block title %}Gaming Zone{% endblock %}</title>
 
     {% load bootstrap5 %}
     {% bootstrap_css %}
