--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -16,14 +16,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4 shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">Gaming Zone</a>
+            <a class="navbar-brand fw-bold" href="{% url 'games_page' %}">Gaming Zone</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Cémantix</a>
+                        <a class="nav-link active" href="{% url 'cemantix_game' %}">Cémantix</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Hangman</a>
