--- a/website/templates/website/game/game_page.html
+++ b/website/templates/website/game/game_page.html
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-lightbulb"></i> Cémantix</h5>
                 <p class="card-text">A word-guessing game with semantic similarity.</p>
-                <a href="#" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
+                <a href="{% url 'cemantix_game' %}" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
             </div>
         </div>
 
