--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -26,7 +26,7 @@
                         <a class="nav-link active" href="{% url 'cemantix_game' %}">Cémantix</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hangman</a>
+                        <a class="nav-link" href="{% url 'hangman_game' %}">Hangman</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Game 3 ?</a>
