--- a/website/templates/website/game/game_page.html
+++ b/website/templates/website/game/game_page.html
@@ -17,7 +17,7 @@
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-emoji-laughing"></i> Hangman</h5>
                 <p class="card-text">Guess the hidden word, letter by letter!</p>
-                <a href="#" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
+                <a href="{% url 'hangman_game' %}" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
             </div>
         </div>
 
