--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -22,19 +22,22 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'cemantix_game' %}">Cémantix</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'hangman_game' %}">Hangman</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Game 3 ?</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'cemantix_game' %}">Cémantix</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'hangman_game' %}">Hangman</a></li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><span class="nav-link">Score: {{ user.score.points }}</span></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Register</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
+
 
     <div class="container flex-grow-1">
         <div class="row">
