--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -22,12 +22,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                    {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'cemantix_game' %}">Cémantix</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'hangman_game' %}">Hangman</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'leaderboard' %}"><i class="bi bi-trophy"></i></a></li>
+                    {% endif %}
+
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
-                        <li class="nav-item"><span class="nav-link">Score: {{ user.score.points }}</span></li>
+                        <a class="nav-link text-dark" href="#">{{ user.username }}</a>
+                        <li class="nav-item"><span class="nav-link text-danger">Score: {{ user.score.points }}</span></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
