--- a/website/templates/website/game/game_page.html
+++ b/website/templates/website/game/game_page.html
@@ -9,7 +9,9 @@
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-lightbulb"></i> Cémantix</h5>
                 <p class="card-text">A word-guessing game with semantic similarity.</p>
+                {% if user.is_authenticated %}
                 <a href="{% url 'cemantix_game' %}" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
+                {% endif %}
             </div>
         </div>
 
@@ -17,7 +19,9 @@
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-emoji-laughing"></i> Hangman</h5>
                 <p class="card-text">Guess the hidden word, letter by letter!</p>
+                {% if user.is_authenticated %}
                 <a href="{% url 'hangman_game' %}" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
+                {% endif %}
             </div>
         </div>
 
@@ -25,7 +29,9 @@
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-hourglass-split"></i> Game 3 ?</h5>
                 <p class="card-text">Another fun game coming soon!</p>
+                {% if user.is_authenticated %}
                 <a href="#" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
+                {% endif %}
             </div>
         </div>
     </div>
