--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -25,6 +25,7 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'cemantix_game' %}">Cémantix</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'hangman_game' %}">Hangman</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'lock_game' %}">Lock</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'leaderboard' %}"><i class="bi bi-trophy"></i></a></li>
                     {% endif %}
 
@@ -32,8 +33,8 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <a class="nav-link text-dark" href="#">{{ user.username }}</a>
-                        <li class="nav-item"><span class="nav-link text-danger">Score: {{ user.score.points }}</span></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                        <li class="nav-item"><span class="nav-link text-success">Score: {{ user.score.points }}</span></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right text-danger"></i></a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Register</a></li>
