--- a/website/templates/website/game/game_page.html
+++ b/website/templates/website/game/game_page.html
@@ -27,10 +27,10 @@
 
         <div class="card mb-4 shadow-sm">
             <div class="card-body">
-                <h5 class="card-title"><i class="bi bi-hourglass-split"></i> Game 3 ?</h5>
+                <h5 class="card-title"><i class="bi bi-hourglass-split"></i>Lock</h5>
                 <p class="card-text">Another fun game coming soon!</p>
                 {% if user.is_authenticated %}
-                <a href="#" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
+                <a href="{% url 'lock_game' %}" class="btn btn-primary"><i class="bi bi-play-circle"></i> Play</a>
                 {% endif %}
             </div>
         </div>
