--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -25,6 +25,7 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'cemantix_game' %}">Cémantix</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'hangman_game' %}">Hangman</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'crossword_game' %}">Crossword</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'lock_game' %}">Lock</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'leaderboard' %}"><i class="bi bi-trophy"></i></a></li>
                     {% endif %}
